--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Règle Numéro : smile, c'est la base!</h1>
+        <h2>Ensuite on articule bien pour dire bonjour, toujours en sollicitant les zygomatiques.</h2>
     
     </body>
 </html>
